--- a/assets/src/scss/object/project/_project.scss
+++ b/assets/src/scss/object/project/_project.scss
@@ -1,5 +1,6 @@
 @import 'site-branding';
 @import 'global-nav';
+@import 'gallery';
 @import '3points';
 @import 'recent-posts';
 @import 'recent-posts-list';
