Added front page feature area

--- a/assets/src/scss/object/project/_project.scss
+++ b/assets/src/scss/object/project/_project.scss
@@ -1,6 +1,7 @@
 @import 'site-branding';
 @import 'global-nav';
 @import 'gallery';
+@import 'feature';
 @import '3points';
 @import 'recent-posts';
 @import 'recent-posts-list';
