Added front page 3 template

--- a/assets/src/scss/object/project/_3points.scss
+++ b/assets/src/scss/object/project/_3points.scss
@@ -9,5 +9,13 @@
 			display: block;
 			padding-top: 75%;
 		}
+
+		&--circle {
+			border-radius: 100%;
+
+			&::before {
+				padding-top: 100%;
+			}
+		}
 	}
 }
