Added front page template 4

--- a/assets/src/scss/object/project/_project.scss
+++ b/assets/src/scss/object/project/_project.scss
@@ -6,3 +6,5 @@
 @import 'recent-posts';
 @import 'recent-posts-list';
 @import 'social-nav';
+@import 'recent-news-marsonry';
+@import 'recent-item';
