Added front page template 6

--- a/assets/src/scss/object/project/_project.scss
+++ b/assets/src/scss/object/project/_project.scss
@@ -6,5 +6,6 @@
 @import 'recent-posts';
 @import 'recent-posts-list';
 @import 'social-nav';
-@import 'recent-news-marsonry';
+@import 'recent-news-masonry';
+@import 'recent-item-masonry';
 @import 'recent-item';
