--- a/assets/src/scss/layout/_footer.scss
+++ b/assets/src/scss/layout/_footer.scss
@@ -1,4 +1,5 @@
 .l-footer {
+	margin-top: $wpbook-base-line-height;
 	background-color: #eee;
 	padding-top: $wpbook-base-line-height;
 	padding-bottom: $wpbook-base-line-height;
