--- a/assets/src/scss/object/project/_content.scss
+++ b/assets/src/scss/object/project/_content.scss
@@ -1,10 +1,21 @@
 .p-content {
+	margin: 0 0 $wpbook-base-line-height;
+
+	&__subcopy {
+		margin: 0 0 $wpbook-base-line-height;
+		background-color: #eee;
+		padding: $wpbook-base-font-size;
+	}
+
 	&__title {
 		@include wpbook-font-size-line-height( $wpbook-base-font-size * 2 );
+		margin: 0 0 $wpbook-base-line-height;
 	}
 
 	&__entry-meta {
 		margin: 0 0 $wpbook-base-line-height;
+		border-top: 1px solid #ddd;
+		padding-top: $wpbook-base-font-size;
 
 		> ul {
 			list-style: none;
@@ -15,6 +26,16 @@
 				display: inline-block;
 				margin: 0 $wpbook-base-font-size 0 0;
 			}
+		}
+	}
+
+	&__excerpt {
+		margin: 0 0 $wpbook-base-line-height;
+		background-color: #eee;
+		padding: $wpbook-base-font-size;
+
+		> :last-child {
+			margin-bottom: 0;
 		}
 	}
 }
