--- a/assets/src/scss/object/project/_project.scss
+++ b/assets/src/scss/object/project/_project.scss
@@ -10,4 +10,7 @@
 @import 'recent-item-masonry';
 @import 'recent-item';
 @import 'content';
+@import 'entry-meta';
 @import 'page-header';
+@import 'widget';
+@import 'entries';
