--- a/assets/src/scss/core/function/_vertical-rhythm.scss
+++ b/assets/src/scss/core/function/_vertical-rhythm.scss
@@ -14,7 +14,7 @@
 	$line-height-px: $value-px + ( $between-lines-px * $coefficient );
 
 	@if ( $line-height-px < $value-px + ( $between-lines-px * 2 ) ) {
-		@return vertical-rhythm( $value-px, ( $coefficient + 1 ) );
+		@return wpbook-vertical-rhythm( $value-px, ( $coefficient + 1 ) );
 	} @else {
 		@if ( $value-px % $base-font-size-px == 0 and $value-px > $base-font-size-px ) {
 			@return $line-height-px - ( $between-lines-px / 2 );
