--- a/assets/src/scss/layout/_header.scss
+++ b/assets/src/scss/layout/_header.scss
@@ -3,6 +3,7 @@
 }
 
 .l-header {
+	position: relative;
 	background-color: #fff;
 	@include header_shadow();
 	transition: background-color .2s;
@@ -12,6 +13,13 @@
 		right: 0;
 		left: 0;
 		z-index: 1;
+	}
+
+	.c-hamburger-btn {
+		position: absolute;
+		top: 50%;
+		right: 15px;
+		transform: translateY( -50% );
 	}
 
 	&--overlay {
