--- a/assets/src/scss/object/project/_project.scss
+++ b/assets/src/scss/object/project/_project.scss
@@ -1,6 +1,7 @@
 @import 'site-branding';
 @import 'header-nav';
 @import 'global-nav';
+@import 'mobile-nav';
 @import 'gallery';
 @import 'feature';
 @import '3points';
