--- a/assets/src/scss/object/project/_entries.scss
+++ b/assets/src/scss/object/project/_entries.scss
@@ -15,13 +15,13 @@
 	}
 
 	&__title {
-		@include wpbook-font-size-line-height( $wpbook-base-font-size * 2 );
+		@include wpbook-font-size-line-height( $wpbook-base-font-size * 1.5 );
 		font-weight: bold;
-		margin: 0 0 $wpbook-base-line-height;
+		margin: 0 0 ( $wpbook-base-line-height / 2 );
 	}
 
 	&__body {
-		margin: 0 0 $wpbook-base-line-height;
+		margin: 0 0 ( $wpbook-base-line-height / 2 );
 		> :last-child {
 			margin-bottom: 0;
 		}
