--- a/assets/src/scss/object/project/_project.scss
+++ b/assets/src/scss/object/project/_project.scss
@@ -9,8 +9,8 @@
 @import 'recent-posts-list';
 @import 'social-nav';
 @import 'recent-news-masonry';
-@import 'recent-item-masonry';
-@import 'recent-item';
+@import 'recent-items-masonry';
+@import 'recent-items';
 @import 'content';
 @import 'entry-meta';
 @import 'page-header';
