--- a/src/scss/object/project/_project.scss
+++ b/src/scss/object/project/_project.scss
@@ -14,6 +14,7 @@
 @import 'content';
 @import 'entry-meta';
 @import 'page-header';
+@import 'pagination';
 @import 'widget';
 @import 'entries';
 @import 'child-pages';
