--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,11 @@
-@import 'core/core';
+@import 'core/function/*';
+@import 'core/variable/*';
+@import 'core/mixin/*';
+
+@import 'foundation/wordpress/*';
 @import 'foundation/foundation';
-@import 'layout/layout';
-@import 'object/object';
+
+@import 'layout/*';
+
+@import 'object/component/*';
+@import 'object/project/*';
