色違いスキンを作りやすいように blue のレイアウト系CSSプロパティを main css に移行

--- a/src/scss/foundation/_foundation.scss
+++ b/src/scss/foundation/_foundation.scss
@@ -46,3 +46,8 @@ p, ul, ol, dl, table {
 .input-group {
   z-index: 0;
 }
+
+.smart-cf-upload-image,
+.smart-cf-upload-file {
+  max-width: 500px;
+}
