--- a/src/scss/object/project/_child-pages.scss
+++ b/src/scss/object/project/_child-pages.scss
@@ -7,16 +7,34 @@
   &__item {
     margin: $wpbook-base-line-height 0 0;
     padding: 0;
+
+    .c-media {
+      min-width: 18em;
+
+      @include wpbook-bp-min(750px) {
+        min-width: 720px;
+      }
+
+      @include wpbook-bp-min(970px) {
+        min-width: 330px;
+      }
+
+      @include wpbook-bp-min(1170px) {
+        min-width: 408px;
+      }
+    }
   }
 
   &__title {
-    @include wpbook-font-size-line-height($wpbook-base-font-size * 1.5);
+    @include wpbook-font-size-line-height($wpbook-base-font-size + 2);
     font-weight: bold;
     margin-bottom: ($wpbook-base-font-size / 2);
   }
 
   &__excerpt {
     margin-bottom: ($wpbook-base-font-size / 2);
+    @include wpbook-font-size($wpbook-base-font-size - 2);
+    line-height: 1.4;
 
     * {
       margin-bottom: 0;
