--- a/src/scss/object/project/_global-nav.scss
+++ b/src/scss/object/project/_global-nav.scss
@@ -28,7 +28,7 @@
       display: inline-block;
 
       > a {
-        padding: ($wpbook-base-line-height / 2) $wpbook-base-line-height;
+        padding: 12px 24px;
       }
     }
   }
