--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,8 +2,9 @@
 @import 'core/variable/*';
 @import 'core/mixin/*';
 
-@import 'foundation/wordpress/*';
 @import 'foundation/foundation';
+@import 'foundation/wordpress/*';
+@import 'foundation/bootstrap/*';
 
 @import 'layout/*';
 
