--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .l-footer {
-  margin-top: $wpbook-base-line-height;
+  margin-top: 100px;
   background-color: #eee;
   padding-top: $wpbook-base-line-height;
   padding-bottom: $wpbook-base-line-height;
