--- a/src/scss/object/project/_3points.scss
+++ b/src/scss/object/project/_3points.scss
@@ -1,7 +1,13 @@
 .p-3points {
+  padding: 80px 0;
+
+  @include wpbook-bp-md-min() {
+    padding: 30px 0;
+  }
 
   &__item {
     margin-bottom: $wpbook-base-line-height;
+    padding: 1.8em;
 
     @include wpbook-bp-md-min() {
       margin-bottom: 0;
@@ -36,5 +42,15 @@
 
   &__link {
     margin-top: ($wpbook-base-line-height / 2);
+
+    .btn {
+      width: 100%;
+    }
+  }
+
+  &__description {
+    line-height: 1.4;
+    font-size: ($wpbook-base-font-size - 1);
+    margin: 1em 0;
   }
 }
