--- a/src/scss/object/project/_content.scss
+++ b/src/scss/object/project/_content.scss
@@ -9,8 +9,19 @@
 
   &__entry-meta {
     margin: 0 0 $wpbook-base-line-height;
-    border-top: 1px solid #ddd;
     padding: $wpbook-base-font-size 0 0;
+
+    a {
+      font-size: 12px;
+      display: inline-block;
+      padding: 2px 6px;
+      margin-left: 4px;
+      border-radius: 2px;
+      margin-right: 4px;
+      line-height: 1.1;
+      background-color: #eee;
+      color: $wpbook-color-text;
+    }
   }
 
   &__title {
