--- a/src/scss/object/project/_recent-posts-list.scss
+++ b/src/scss/object/project/_recent-posts-list.scss
@@ -8,6 +8,7 @@
 
   &__item {
     margin-bottom: $wpbook-base-line-height;
+    line-height: 1.4;
 
     &:last-child {
       margin-bottom: 0;
@@ -25,6 +26,10 @@
       &:last-child {
         padding-right: 0;
       }
+    }
+
+    .btn {
+      margin-top: 30px;
     }
   }
 }
