p-widget to c-widget

--- a/src/scss/object/component/_widget.scss
+++ b/src/scss/object/component/_widget.scss
@@ -1,4 +1,4 @@
-.p-widget {
+.c-widget {
   &__title {
     margin: 10px 0 15px;
     @include wpbook-font-size-line-height($wpbook-base-font-size + 2);
