--- a/src/scss/core/variable/_responsive.scss
+++ b/src/scss/core/variable/_responsive.scss
@@ -1,10 +1,10 @@
-$wpbook-bp-xs-min: 0;
+$myouan-bp-xs-min: 0;
 
-$wpbook-bp-sm-min: 768px;
-$wpbook-bp-xs-max: ($wpbook-bp-sm-min - 1);
+$myouan-bp-sm-min: 768px;
+$myouan-bp-xs-max: ($myouan-bp-sm-min - 1);
 
-$wpbook-bp-md-min: 992px;
-$wpbook-bp-sm-max: ($wpbook-bp-md-min - 1);
+$myouan-bp-md-min: 992px;
+$myouan-bp-sm-max: ($myouan-bp-md-min - 1);
 
-$wpbook-bp-lg-min: 1200px;
-$wpbook-bp-md-max: ($wpbook-bp-lg-min - 1);
+$myouan-bp-lg-min: 1200px;
+$myouan-bp-md-max: ($myouan-bp-lg-min - 1);
