--- a/src/scss/core/variable/_typography.scss
+++ b/src/scss/core/variable/_typography.scss
@@ -1,3 +1,3 @@
-$wpbook-base-font-size: 16px !default;
-$wpbook-between-lines: 6px !default;
-$wpbook-base-line-height: ($wpbook-base-font-size + $wpbook-between-lines * 2) !default;
+$myouan-base-font-size: 16px !default;
+$myouan-between-lines: 6px !default;
+$myouan-base-line-height: ($myouan-base-font-size + $myouan-between-lines * 2) !default;
