--- a/src/scss/foundation/wordpress/_align.scss
+++ b/src/scss/foundation/wordpress/_align.scss
@@ -1,11 +1,11 @@
 .alignleft {
   float: left;
-  margin-right: $wpbook-base-font-size;
+  margin-right: $myouan-base-font-size;
 }
 
 .alignright {
   float: right;
-  margin-left: $wpbook-base-font-size;
+  margin-left: $myouan-base-font-size;
 }
 
 .aligncenter {
