--- a/src/scss/foundation/wordpress/_gallery.scss
+++ b/src/scss/foundation/wordpress/_gallery.scss
@@ -1,5 +1,5 @@
 .gallery {
-  margin: 0 0 ($wpbook-base-line-height / 2);
+  margin: 0 0 ($myouan-base-line-height / 2);
 
   &-item {
     display: inline-block;
