--- a/src/scss/foundation/wordpress/_widget.scss
+++ b/src/scss/foundation/wordpress/_widget.scss
@@ -53,6 +53,6 @@
 
 .widget_tag_cloud {
   .tagcloud {
-    line-height: $wpbook-base-line-height;
+    line-height: $myouan-base-line-height;
   }
 }
