--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .l-footer {
   margin-top: 100px;
   background-color: #eee;
-  padding-top: $wpbook-base-line-height;
-  padding-bottom: $wpbook-base-line-height;
+  padding-top: $myouan-base-line-height;
+  padding-bottom: $myouan-base-line-height;
 }
