--- a/src/scss/object/project/_page-header.scss
+++ b/src/scss/object/project/_page-header.scss
@@ -4,5 +4,5 @@
   background-size: cover;
   height: 33.33333vh;
   max-height: 350px;
-  margin-bottom: $wpbook-base-line-height;
+  margin-bottom: $myouan-base-line-height;
 }
