--- a/src/scss/core/function/_vertical-rhythm.scss
+++ b/src/scss/core/function/_vertical-rhythm.scss
@@ -5,16 +5,16 @@
 // @param   int  $coefficient
 // @return  int
 //
-@function wpbook-vertical-rhythm($value, $coefficient: 1) {
-  $between-lines-px   : wpbook-strip-unit($wpbook-between-lines);
-  $base-line-height-px: wpbook-strip-unit($wpbook-base-line-height);
-  $base-font-size-px  : wpbook-strip-unit($wpbook-base-font-size);
-  $value-px           : wpbook-strip-unit($value);
+@function myouan-vertical-rhythm($value, $coefficient: 1) {
+  $between-lines-px   : myouan-strip-unit($myouan-between-lines);
+  $base-line-height-px: myouan-strip-unit($myouan-base-line-height);
+  $base-font-size-px  : myouan-strip-unit($myouan-base-font-size);
+  $value-px           : myouan-strip-unit($value);
 
   $line-height-px: $value-px + ($between-lines-px * $coefficient);
 
   @if ($line-height-px < $value-px + ($between-lines-px * 2)) {
-    @return wpbook-vertical-rhythm($value-px, ($coefficient + 1));
+    @return myouan-vertical-rhythm($value-px, ($coefficient + 1));
   } @else {
     @if ($value-px % $base-font-size-px == 0 and $value-px > $base-font-size-px) {
       @return $line-height-px - ($between-lines-px / 2);
