--- a/src/scss/foundation/wordpress/_wp-caption.scss
+++ b/src/scss/foundation/wordpress/_wp-caption.scss
@@ -3,14 +3,14 @@
   text-align: left;
   background-color: transparent;
   padding: 0;
-  margin: 0 0 $wpbook-base-line-height;
+  margin: 0 0 $myouan-base-line-height;
   border-radius: 0;
   max-width: 100%;
 
   &-text {
-    color: $wpbook-color-gray;
+    color: $myouan-color-gray;
     margin-top: 5px;
-    font-size: ($wpbook-base-font-size - 2px);
+    font-size: ($myouan-base-font-size - 2px);
     line-height: 1.4;
   }
 }
