--- a/src/scss/object/component/_section.scss
+++ b/src/scss/object/component/_section.scss
@@ -1,4 +1,4 @@
 .c-section {
-  padding-top: $wpbook-base-line-height;
-  padding-bottom: $wpbook-base-line-height;
+  padding-top: $myouan-base-line-height;
+  padding-bottom: $myouan-base-line-height;
 }
