--- a/src/scss/object/project/_entries.scss
+++ b/src/scss/object/project/_entries.scss
@@ -2,12 +2,12 @@
   list-style: none;
   margin: 0;
   border-top: 1px solid #ddd;
-  padding: $wpbook-base-line-height 0 0;
+  padding: $myouan-base-line-height 0 0;
 
   &__item {
     border-bottom: 1px solid #ddd;
-    margin: 0 0 $wpbook-base-line-height;
-    padding: 0 0 $wpbook-base-line-height;
+    margin: 0 0 $myouan-base-line-height;
+    padding: 0 0 $myouan-base-line-height;
 
     &:last-child {
       margin-bottom: 0;
@@ -15,13 +15,13 @@
   }
 
   &__title {
-    @include wpbook-font-size-line-height($wpbook-base-font-size * 1.5);
+    @include myouan-font-size-line-height($myouan-base-font-size * 1.5);
     font-weight: bold;
-    margin: 0 0 ($wpbook-base-line-height / 2);
+    margin: 0 0 ($myouan-base-line-height / 2);
   }
 
   &__body {
-    margin: 0 0 ($wpbook-base-line-height / 2);
+    margin: 0 0 ($myouan-base-line-height / 2);
     > :last-child {
       margin-bottom: 0;
     }
