--- a/src/scss/object/project/_entry-meta.scss
+++ b/src/scss/object/project/_entry-meta.scss
@@ -1,11 +1,11 @@
 .p-entry-meta {
   list-style: none;
   margin: 0;
-  @include wpbook-font-size-line-height($wpbook-base-font-size - 2);
+  @include myouan-font-size-line-height($myouan-base-font-size - 2);
   padding: 0;
 
   &__item {
     display: inline-block;
-    margin: 0 $wpbook-base-font-size 0 0;
+    margin: 0 $myouan-base-font-size 0 0;
   }
 }
