--- a/src/scss/object/project/_feature.scss
+++ b/src/scss/object/project/_feature.scss
@@ -1,5 +1,5 @@
 .p-feature {
-  @include wpbook-bp-md-min() {
+  @include myouan-bp-md-min() {
     display: table;
     table-layout: fixed;
     width: 100%;
@@ -16,7 +16,7 @@
       padding-top: 75%;
     }
 
-    @include wpbook-bp-md-min() {
+    @include myouan-bp-md-min() {
       display: table-cell;
       width: 100%;
     }
@@ -29,11 +29,11 @@
       margin-bottom: 0;
     }
 
-    @include wpbook-bp-md-min() {
+    @include myouan-bp-md-min() {
       display: table-cell;
       width: 100%;
       vertical-align: middle;
-      padding: $wpbook-base-line-height;
+      padding: $myouan-base-line-height;
     }
   }
 }
