--- a/src/scss/object/project/_recent-news-masonry.scss
+++ b/src/scss/object/project/_recent-news-masonry.scss
@@ -1,6 +1,6 @@
 .p-recent-news-masonry {
   &__list {
-    @include wpbook-clearfix();
+    @include myouan-clearfix();
     list-style: none;
     margin: 0 -15px -15px;
     padding: 0;
@@ -10,14 +10,14 @@
     padding: 15px;
     padding: 0;
 
-    @include wpbook-bp-md-min() {
+    @include myouan-bp-md-min() {
       float: left;
       width: 25%;
     }
 
     > a {
       display: block;
-      color: $wpbook-color-text;
+      color: $myouan-color-text;
       padding: 15px;
       text-decoration: none;
     }
