--- a/src/scss/object/project/_social-nav.scss
+++ b/src/scss/object/project/_social-nav.scss
@@ -7,7 +7,7 @@
 
     .menu-item {
       position: relative;
-      margin: 0 ($wpbook-base-font-size / 2);
+      margin: 0 ($myouan-base-font-size / 2);
       display: inline-block;
       padding: 0;
 
